--- a/hypr/hypr/hyprland.conf
+++ b/hypr/hypr/hyprland.conf
@@ -1,6 +1,9 @@
-######
-#Hyprland Config Files
-######
+# #######################################################################################
+# WElCOME MECHCHUCK HYPRLAND CONFIG.
+# EDIT THIS CONFIG ACCORDING TO THE HYPRLANDWIKI INSTRUCTIONS.
+# #######################################################################################
+
+
 # This is an example Hyprland config file.
 # Refer to the wiki for more information.
 # https://wiki.hypr.land/Configuring/
@@ -30,7 +33,7 @@ monitor=,preferred,auto,auto
 # Set programs that you use
 $terminal = konsole
 $fileManager = dolphin
-$menu = wofi --show drun
+$menu = rofi --show drun -show-icons
 
 
 #################
@@ -248,7 +251,7 @@ bind = $mainMod_SHIFT, D, togglegroup, # dwindle
 bind = $mainMod, W, exec, firefox
 bind = $mainMod, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
 
-# === BRIGHTNESS AYARLARI ===
+# === BRIGHTNESS SETTİNG ===
 
 # Fn tuşları genelde XF86MonBrightnessDown/Up olarak tanınır
 bind = , XF86MonBrightnessDown, exec, brightnessctl set 10%-
